# px4_gazebo_wind3d

./: .gitignore  CMakeLists.txt  README.md  package.xml
datasets/UNCC_EngCampus/: compute_ifft.py
include/: gazebo_anemometer_plugin.h  gazebo_dynamic_wind_plugin.h  gazebo_ros_interface_plugin.h  gazebo_wind3d_motor_model_plugin.h  gazebo_wind3d_plugin.h  gazebo_wind3d_visual_plugin.h  gazebo_wind3d_world_plugin.h
include/mav_msgs/: default_topics.h
include/nanoflann/: utils.h
launch/: spawn_mav.launch  wind3d_drone_demo.launch  wind3d_drone_gzdebug.launch
matlab/: plotUrbanFlowCSV.m
models/uncc_engcampus/: model.config  uncc_engcampus.sdf
models/uncc_engcampus/meshes/: custom_geometry.stl  custom_geometry_v2.dae  custom_geometry_v2.stl
msg/: Anemometer.msg
msgs/: Anemometer.proto  ConnectGazeboToRosTopic.proto  ConnectRosToGazeboTopic.proto  Header.proto  WindServerRegistration.proto  WindSpeed.proto  WrenchStamped.proto
rviz/: wind3d_drone_demo.rviz
src/: gazebo_anemometer_plugin.cpp  gazebo_dynamic_wind_plugin.cpp  gazebo_ros_interface_plugin.cpp  gazebo_wind3d_motor_model_plugin.cpp  gazebo_wind3d_plugin.cpp  gazebo_wind3d_visual_plugin.cpp  gazebo_wind3d_world_plugin.cpp
worlds/: windy.world  windy_custom.world  windy_static.world  windy_test.world  windy_uncc_engcampus.world
xacro/: iris-wind3d-verion.sdf  iris-wind3d-version.sdf  iris-wind3d-version.urdf  iris.xacro  iris_base.xacro  multirotor_base.xacro  multirotor_base_px4.xacro
